--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -50,13 +50,13 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" formControlName="answer" id="trueRadio" value="true" >
                                 <label class="form-check-label" for="trueRadio">
-                                    True
+                                    Yes
                                 </label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" formControlName="answer" id="falseRadio" value="false">
                                 <label class="form-check-label" for="falseRadio">
-                                    False
+                                    No
                                 </label>
                             </div>
 
